refactor(imui): 优化节点编辑器中的列表访问和坐标计算
- 将整数除法改为浮点除法以确保坐标